<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="70sp"
                android:textStyle="bold"
                android:text="@string/titleIce" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtNombre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profession"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/edtProfesion" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/edtEmail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/edtPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="textPassword"
                android:hint="@string/retrypassword"
                android:ems="10"
                android:id="@+id/edtVerificarPassword" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:id="@+id/btnRegistrar"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:textColor="#3F51B5"
                android:paddingRight="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/concuenta"
                android:id="@+id/tvIniciarSesion"
                android:layout_gravity="right" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
