<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="70sp"
        android:textStyle="bold"
        android:text="@string/titleIce" />


    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:text="jhonc@gmail.com"
            android:ems="10"
            android:id="@+id/edtEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="123"
            android:ems="10"
            android:id="@+id/edtPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleIniciarSesion"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:textColor="#3F51B5"
        android:paddingRight="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sincuenta"
        android:id="@+id/tvRegister"
        android:layout_gravity="right" />

</LinearLayout>
