<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegisterUbicationActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="70sp"
        android:textStyle="bold"
        android:text="@string/titleIce" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameStreet"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/edtCalle" />

            <LinearLayout
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/presiona"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:id="@+id/tvLocation" />

            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/spMunicipalities"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dialog" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:checked="true"
                        android:textSize="16sp"
                        android:text="@string/galeria"
                        android:id="@+id/rbGaleria" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:text="@string/camara"
                        android:id="@+id/rbCamara" />


                </RadioGroup>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnOption"
                    android:src="@mipmap/ic_camera" />
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/imgFoto"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
